--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "font-awesome": "^4.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vue2-perfect-scrollbar": "^1.3.0",
-    "vuetify": "^2.2.15",
+    "vue2-perfect-scrollbar": "^1.4.0",
+    "vuetify": "^2.2.17",
     "vuetify-loader": "^1.4.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.3"
   },
   "browserslist": [
     "> 1%",
@@ -37,7 +37,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.5.3",
-    "sass": "^1.26.2",
+    "sass": "^1.26.3",
     "sass-loader": "^7.3.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
@@ -45,6 +45,7 @@
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "acorn": "^6.4.1"
   }
 }
